[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-budget-skin"
version = "0.1.0"
description = "Drop-in USD caps + egress allowlist + audit log for the Hermes Agent runtime."
readme = "README.md"
authors = [{ name = "Mukunda Katta" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "agent", "budget", "hermes", "safety", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  # Runtime deps are intentionally tiny. The shared USD pool comes from
  # token-budget-py; the egress allowlist is a plain set check in this package.
  "token-budget-py>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/hermes-budget-skin"
Repository = "https://github.com/MukundaKatta/hermes-budget-skin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
